--- a/build.gradle
+++ b/build.gradle
@@ -25,11 +25,18 @@ group = 'org.rs'
 
 repositories {
     mavenCentral()
+    maven { url 'https://jogamp.org/deployment/maven' }
 }
+
 
 dependencies {
     implementation 'org.jetbrains.kotlin:kotlin-stdlib:1.8.22'
     implementation 'com.displee:rs-cache-library:7.2.0'
+    implementation 'org.jogamp.jogl:jogl-all:2.5.0'
+    implementation 'org.jogamp.gluegen:gluegen-rt:2.5.0'
+
+
+
 }
 
 java {
