--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,7 @@ plugins {
     id 'application'
     id 'idea'
     id 'org.jetbrains.kotlin.jvm' version '1.8.22'
+    id 'com.github.johnrengelman.shadow' version '6.0.0'
 }
 
 group = 'org.rs'
@@ -63,7 +64,17 @@ sourceSets {
     }
 }
 
+shadowJar {
+    archiveBaseName.set("530-Editor")
+    archiveClassifier.set("")
+    archiveVersion.set("")
+    manifest {
+        attributes 'Main-Class': 'launcher.Main'
+    }
+}
+
 tasks.jar {
+    mainClassName = "launcher.Main"
     archiveBaseName.set("530-Editor")
     manifest {
         attributes(
@@ -77,5 +88,5 @@ tasks.jar {
 }
 
 tasks.build {
-    dependsOn tasks.jar
+    dependsOn tasks.shadowJar
 }
