--- a/build.gradle
+++ b/build.gradle
@@ -31,7 +31,7 @@ repositories {
 
 dependencies {
     implementation 'com.displee:rs-cache-library:7.2.0'
-    implementation fileTree(dir: 'libs', include: ['jogl-all.jar'])
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
 }
 
 java {
@@ -81,6 +81,8 @@ tasks.jar {
                 'Main-Class': 'launcher.Main'
         )
     }
+    exclude 'META-INF/**'
+
     from {
         configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
     }
